--- a/.github/workflows/spinup-destroy.yml
+++ b/.github/workflows/spinup-destroy.yml
@@ -6,9 +6,9 @@ on:
 
 env:
   IMAGE_REGISTRY_URL: ghcr.io
-  AZURE_RESOURCE_GROUP: cd-with-actions
-  AZURE_APP_PLAN: actions-ttt-deployment
-  AZURE_LOCATION: '"Central US"'
+  AZURE_RESOURCE_GROUP: takizawa-ga
+  AZURE_APP_PLAN: takizawa-ga-asp
+  AZURE_LOCATION: '"Japan East"'
   ###############################################
   ### Replace <username> with GitHub username ###
   ###############################################
