--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -17,6 +17,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.5.2
+        with:
+          node-version: v16.0.0 # optional
+          
       - name: npm install and build webpack
         run: |
           npm install
