--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -3,7 +3,7 @@ name: Deploy to staging
 on:
   pull_request:
     types: [labeled]
-  workflow_dispatch
+  workflow_dispatch:
 
 env:
   IMAGE_REGISTRY_URL: ghcr.io
